2009-10-06  Daniel Bates  <dbates@webkit.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=30107

        Fixes an issue where the Mac build does return the correct drop effect
        with respect to the HTML 5 specification when effectAllowed == "none".

        Currently, when effectAllowed == "none" and dropEffect == "copy" or
        dropEffect == "move" the resulting drop effect is "copy" and "move",
        respectively. However, the HTML 5 specification states that regardless
        of the specified dropEffect, when effectAllowed == "none" the resulting
        drop effect should be "none".

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView draggingSourceOperationMaskForLocal:]):
2009-10-06  Daniel Bates  <dbates@webkit.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=30107

        Tests that drag-and-drop returns dropEffect = "none" when
        effectAllowed == "none", regardless of the user-specified
        drop effect.

        * fast/events/drag-and-drop-none-expected.txt: Added.
        * fast/events/drag-and-drop-none.html: Added.
        * platform/win/Skipped: This test does not work under
        Windows. We need the fix for bug #24731.


Canonical link: https://commits.webkit.org/40762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49203 268f45cc-cd09-0410-ab3c-d52691b4dbfc